# targooV2

./: .env.example  .gitignore  Cargo.toml  LICENSE  Shuttle.toml  package-lock.json
data/: dictionary.json  emission_factors.json
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
frontend/.next/cache/: .tsbuildinfo  config.json
frontend/.next/cache/webpack/client-production/: index.pack
frontend/.next/cache/webpack/edge-server-production/: index.pack
frontend/.next/cache/webpack/server-production/: 1.pack  index.pack  index.pack.old
frontend/.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: _not-found.html  _not-found.rsc  index.html  index.rsc  page.js  page_client-reference-manifest.js
frontend/.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
frontend/.next/server/chunks/: 734.js
frontend/.next/server/pages/: 500.html
frontend/.next/static/chunks/: 530-e1c14c5d98925d45.js  main-app-3005365b866cf601.js
frontend/.next/static/chunks/app/: layout-c51f31ffcd4337c1.js  page-6a90a1ad186811f2.js
frontend/.next/static/css/: 8f215c815b0a606f.css
frontend/.next/types/app/: layout.ts  page.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: DownloadButton.tsx  DropZone.tsx  ProcessingStatus.tsx  ResultCard.tsx
src/: db.rs  exporter.rs  hitl.rs  ingest.rs  main.rs  physics.rs  processor.rs
src/db/: mod.rs  schema.rs
src/models/: mod.rs
src/output/: mod.rs
src/pipeline/: dispatcher.rs  groq.rs  mapper.rs  mod.rs  validator.rs
src/routes/: jobs.rs  mod.rs
