# Project configuration and dependency manifest
[package]
name = "targoo-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-runtime = "0.48.0"
shuttle-axum = "0.48.0"
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
libsql = "0.6.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
tower-http = { version = "0.5", features = ["cors"] }
