# Project configuration and dependency manifest
[package]
name = "targoo-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-runtime = "0.49.0"
shuttle-axum = "0.49.0"
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.38.0", features = ["full"] }
libsql = "0.6.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
zip = "2.1.3"
tower-http = { version = "0.5.2", features = ["cors"] }
calamine = { version = "0.24", features = ["dates"] }
csv = "1.3"
multer = "3.0"
